--- a/style.css
+++ b/style.css
@@ -74,18 +74,45 @@ body {
 .book {
     text-align: center;
     border: 2px solid black;
-    background-color: aqua;
+    background-color: rgba(111, 0, 255, 0.678);
+    border-radius: 20px;
     width: 200px; 
     margin: 10px; 
 }
 .remove_button {
-    width: 20px;
-    height: 20px;
+    padding: 5px;
+    width: 50px;
+    height: 50px;
     background-color: red;
-    border-radius: 50%;
+    border-radius: 10%;
     color: white;
-    font-size: 10pt; 
+    font-size: 20pt; 
     font-weight: bold;
     cursor: pointer;
+}
+label {
+    font-size: 20pt;
+    font-weight: bold;
+}
+#add_btn2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin: 50px 0 0 180px;
+    width: 80px;
+    height: 50px;
+    background-color: rgba(19, 77, 7, 0.596);
+    border: 2px solid black;
+    border-radius: 10px;
+    font-size: 20pt;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+}
+h3, h2, p{
+    font-size: 20pt;
+    font-weight: bold;
+    color: rgb(180, 177, 177);
 }
 
