--- a/style.css
+++ b/style.css
@@ -82,12 +82,13 @@ body {
 }
 .remove_button {
     padding: 5px;
-    width: 50px;
+    width: 80px;
     height: 50px;
-    background-color: red;
+    text-align: center;
+    background-color: rgb(25, 68, 187);
     border-radius: 10%;
     color: white;
-    font-size: 20pt; 
+    font-size: 15pt; 
     font-weight: bold;
     cursor: pointer;
 }
@@ -115,5 +116,10 @@ h3, h2, p{
     font-size: 20pt;
     font-weight: bold;
     color: rgb(180, 177, 177);
+}
+
+#modi_checkbox{
+
+    margin-right: 50px;
 }
 
