--- a/style.css
+++ b/style.css
@@ -7,22 +7,27 @@
 }
 
 body {
-    background-color: rgba(176, 179, 180, 0.596);
+    display: grid;
+    grid-template-rows: 1fr 6fr 1fr;
+    /* background-color: rgba(176, 179, 180, 0.596); */
+    background-image: url(img/regal.png);
+    background-repeat: round;
 }
-
 header {
     margin: 0 auto;
     height: 120px;
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
-    border-bottom: 5px solid black;
+    background-color:  rgba(77, 49, 7, 0.3);
+   
 }
 
 .titel {
     grid-column: 2;
     font-size: 50pt;
-    font-weight: 300;
+    font-weight: 400;
     justify-self: center;
 }
 
@@ -120,16 +125,17 @@ label{
     background-image: url(img/grungy-front-book-cover-3-780x1008.jpg);
     background-repeat: round;
     border-radius: 5px;
-    width: 200px; 
+    width: 200px;
+    height: 300px; 
     margin: 50px;
     padding: 50px; 
 }
 .book h3, h2, .pages, .read, .read_text{
     color: rgb(195, 213, 230);
     text-align: center;
-    font-size: 20pt;
+    font-size: 15pt;
     font-weight: bold;
-    margin: 10px;
+    margin: 0 0 10px 0;; 
     filter: drop-shadow(2px 2px 2px black);
 }
 
@@ -171,3 +177,15 @@ h2{
     cursor: pointer;
 }
 
+footer {
+    display: flex;
+    justify-content: flex-end;
+    height: 80px;
+    align-items: center;
+}
+.footer_text p {
+    font-size: 20pt;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    margin-right: 50px;
+}
